<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="275dp"
            android:layout_height="71dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/sip_cal"
            android:textColor="@android:color/black"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="229dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="35dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="bottom"
            android:text="@string/sip_amt"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="44dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="664dp"
            android:gravity="top"
            android:text="@string/Rs"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <EditText
            android:id="@+id/txtSipAmt"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="352dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="bottom"
            android:text="@string/sip_gain"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/txtSipAmt"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/txtSipGain"
            android:layout_width="352dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView6"
            app:layout_constraintHorizontal_bias="0.153"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="352dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="bottom"
            android:text="@string/sip_tenure"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/txtSipGain"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txtSipGain"
            app:layout_constraintTop_toBottomOf="@+id/txtSipGain"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/txtSipTym"
            android:layout_width="352dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView8"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:layout_constraintVertical_bias="0.006" />

        <Button
            android:id="@+id/btn_sip_calc"
            android:layout_width="280dp"
            android:layout_height="57dp"
            android:layout_marginTop="25dp"
            android:backgroundTint="#1dbcbb"
            android:gravity="center"
            android:text="@string/calc"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSipTym"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txt1"
            android:layout_width="352dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/estimated_growth"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/txtSipTym"
            app:layout_constraintStart_toStartOf="@+id/txtSipTym"
            app:layout_constraintTop_toBottomOf="@+id/btn_sip_calc"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txt2"
            android:layout_width="352dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/amount_invested"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/txtSipGrowth"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txtSipGrowth"
            app:layout_constraintTop_toBottomOf="@+id/txtSipGrowth"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/txtSipInv"
            android:layout_width="352dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/txt2"
            app:layout_constraintStart_toStartOf="@+id/txt2"
            app:layout_constraintTop_toBottomOf="@+id/txt2"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/img_bck"
            android:layout_width="69dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back" />

        <EditText
            android:id="@+id/txtSipGrowth"
            android:layout_width="352dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/txt1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txt1"
            app:layout_constraintTop_toBottomOf="@+id/txt1"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnSipInfo"
            android:layout_width="233dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/more_info"
            android:backgroundTint="#1dbcbb"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSipInv"
            app:layout_constraintVertical_bias="0.05" />

        <ImageView
            android:id="@+id/img_wt_sip"
            android:layout_width="42dp"
            android:layout_height="43dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.718"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:srcCompat="@drawable/info" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
