<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="275dp"
            android:layout_height="71dp"
            android:fontFamily="serif"
            android:gravity="right|center_vertical"
            android:text="@string/pft_cal"
            android:textColor="@android:color/black"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.741"
            app:layout_constraintStart_toStartOf="@+id/img_bck"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="229dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="bottom"
            android:text="@string/inv_amt"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="44dp"
            android:layout_height="50dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="660dp"
            android:gravity="top|left"
            android:text="@string/Rs"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/txtOtAmt"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:gravity="bottom|left"
            android:inputType="textPersonName"
            android:text=""
            android:textColor="@android:color/black"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.014" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="352dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="bottom"
            android:text="@string/sip_gain"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/txtOtAmt"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/txtOtGain"
            android:layout_width="352dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:gravity="bottom|left"
            android:inputType="textPersonName"
            android:text=""
            android:textColor="@android:color/black"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView6"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintVertical_bias="0.009" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="352dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="bottom"
            android:text="@string/inv_tenure"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/txtOtGain"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txtOtGain"
            app:layout_constraintTop_toBottomOf="@+id/txtOtGain"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/txtIOtTym"
            android:layout_width="352dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:gravity="bottom|left"
            android:inputType="textPersonName"
            android:text=""
            android:textColor="@android:color/black"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView8"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnOtCalc"
            android:layout_width="280dp"
            android:layout_height="57dp"
            android:layout_marginTop="25dp"
            android:backgroundTint="#1dbcbb"
            android:text="@string/cal"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtIOtTym"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txt3"
            android:layout_width="352dp"
            android:layout_height="40dp"
            android:layout_marginTop="25dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/estimated_growth"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/txtIOtTym"
            app:layout_constraintStart_toStartOf="@+id/txtIOtTym"
            app:layout_constraintTop_toBottomOf="@+id/btnOtCalc"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/txtOtGrowth"
            android:layout_width="352dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txt3"
            app:layout_constraintTop_toBottomOf="@+id/txt3"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txt4"
            android:layout_width="352dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/amount_invested"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/txtOtGrowth"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txtOtGrowth"
            app:layout_constraintTop_toBottomOf="@+id/txtOtGrowth"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/txtOtInv"
            android:layout_width="352dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/txt4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txt4"
            app:layout_constraintTop_toBottomOf="@+id/txt4"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/img_bck"
            android:layout_width="69dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back" />

        <Button
            android:id="@+id/btnOtInfo"
            android:layout_width="233dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/more_info"
            android:backgroundTint="#1dbcbb"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtOtInv" />

        <ImageView
            android:id="@+id/img_wt_mf"
            android:layout_width="42dp"
            android:layout_height="43dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.681"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:srcCompat="@drawable/info" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
